// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.metadata;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/securecomputation/metadata/requisition_metadata.proto";


option java_package = "org.wfanet.measurement.securecomputation.metadata";
option java_multiple_files = true;
option java_outer_classname = "MetadataActionProto";

// Enum for ActorType
enum ActorType {
  DATA_WATCHER = 0;
  REQUISITION_FETCHER = 1;
  TEE_SDK = 2;
}

message MetadataAction {
  string name = 1;
  string resource_name = 2;
  ActorType actor_type = 3;
  RequisitionMetadata.State prior_state = 4;
  RequisitionMetadata.State new_state = 5;
  google.protobuf.Timestamp state_change_time = 6;
  google.protobuf.Timestamp create_time = 7;
}
